--- a/singolo1.html
+++ b/singolo1.html
@@ -19,16 +19,16 @@
     </div>
     <div class="slider">                                  <!--slider-->
       <div class="left-arrow">
-        <img src="assets/left-arrow.png">
+        <img src="assets/images/left-arrow.png">
       </div>
       <div class="iphone-vertical">
-        <img src="assets/iPhone Vertical.png">
+        <img src="assets/images/iPhone Vertical.png">
       </div>
       <div class="iphone-horizontal">
-        <img src="assets/iPhone Horizontal.png">
+        <img src="assets/images/iPhone Horizontal.png">
       </div>
       <div class="right-arrow">
-        <img src="assets/right-arrow.png">
+        <img src="assets/images/right-arrow.png">
       </div>
     </div>
     <div class="services">                                  <!--services-->
@@ -40,7 +40,7 @@
       <div class="services-img">
         <div>
           <div class="pen">
-            <img src="assets/Pen.png" width="59px" height="59px">
+            <img src="assets/images/Pen.png" width="59px" height="59px">
             <div class="title-pen">
               <p class="title-services">Custom Design</p>
               <p class="text">Curabitur vestibulum eget mauris quis
@@ -48,7 +48,7 @@
             </div>
             </div>
             <div class="phone">
-              <img src="assets/Phone.png" width="59px" height="59px">
+              <img src="assets/images/Phone.png" width="59px" height="59px">
               <div class="title-phone">
                 <p class="title-services">Responsive Layout</p>
                 <p class="text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
@@ -57,14 +57,14 @@
           </div>
           <div class="bulb-bubble">
             <div class="bulb">
-              <img src="assets/Bulb.png" width="59px" height="59px">
+              <img src="assets/images/Bulb.png" width="59px" height="59px">
               <div class="title-bulb">
                 <p class="title-services">Inovative Ideas</p>
                 <p class="text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
               </div>
             </div>
             <div class="bubble">
-              <img src="assets/Bubble.png"width="59px" height="59px">
+              <img src="assets/images/Bubble.png"width="59px" height="59px">
               <div class="title-bubble">
                 <p class="title-services">24 / 7 Support</h2>
                 <p class="text">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
@@ -73,14 +73,14 @@
           </div>
           <div class="heart-star">
             <div class="heart">
-              <img src="assets/Heart.png"width="59px" height="59px">
+              <img src="assets/images/Heart.png"width="59px" height="59px">
               <div class="title-heart">
                 <p class="title-services">Love Is The Answer</p>
                 <p class="text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
               </div>
             </div>
             <div class="star">
-              <img src="assets/Star.png"width="59px" height="59px">
+              <img src="assets/images/Star.png"width="59px" height="59px">
               <div class="title-star">
                 <p class="title-services">Feel Like A Star</p>
                 <p class="text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
